@@ -1,0 +1,25 @@
+/* XPM */
+static char * q4_xpm[] = {
+"16 16 6 1",
+" 	c None",
+".	c #061C07",
+"+	c #0B210C",
+"@	c #112612",
+"#	c #142915",
+"$	c #1A2E1B",
+"     .    .     ",
+"    .      .    ",
+"   .        .   ",
+"   .        .   ",
+"  .          .  ",
+"  .          .  ",
+"  ..        ..  ",
+"   ..  ..  ..   ",
+"   ... .. ...   ",
+"    ........    ",
+"     ......     ",
+"       ..       ",
+"       ..       ",
+"       ..       ",
+"       ..       ",
+"                "};
