@@ -1,3 +1,7 @@
+Oct 07, 2005: <l-n@users.sourceforge.net>
+- initial Quake4 support (thanks to Timothee Besset for providing
+  the necessary info)
+
 Sep 20, 2005: Jordi Mallach <jordi@sindominio.net>
 - update Catalan transaltion
 
